// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReadAndHighlightInstructions component when the student has not started making highlights renders 1`] = `
<ReadAndHighlightInstructions
  activeStep={1}
  closeReadTheDirectionsModal={[Function]}
  inReflection={false}
  passage={
    Object {
      "highlight_prompt": "",
    }
  }
  removeHighlight={[Function]}
  showReadTheDirectionsModal={false}
  studentHighlights={Array []}
>
  <div
    className="read-and-highlight-container hide-on-mobile"
  >
    <DirectionsSectionAndModal
      activeStep={1}
      className="hide-on-mobile"
      closeReadTheDirectionsModal={[Function]}
      inReflection={false}
      passage={
        Object {
          "highlight_prompt": "",
        }
      }
      showReadTheDirectionsModal={false}
    >
      <div
        className="hide-on-mobile"
      >
        <span />
        <section
          className="directions-section"
        >
          <h3>
            Directions
          </h3>
          <p>
            As you read, highlight two sentences 
            <u />
          </p>
        </section>
      </div>
    </DirectionsSectionAndModal>
    <section
      className="highlight-section"
    >
      <h3>
        Highlights
      </h3>
      <HighlightInstructions>
        <div
          className="highlight-instructions"
        >
          <h4>
            How to highlight
          </h4>
          <div
            className="highlight-instruction one"
          >
            <h5
              className="highlight-instruction-header"
            >
              <span
                className="highlight-instruction-number"
              >
                1
              </span>
              <span>
                Hover over a sentence
              </span>
            </h5>
            <img
              alt="Cursor pointing hand"
              src="undefined/images/icons/cursor-pointinghand.svg"
            />
            <p>
              <span
                className="student-highlight hover"
              >
                Yellowstone National Park was established in 1872 as the first national park in the United States.
              </span>
               It spans across areas in Wyoming, Idaho, and Montana. Yellowstone is extremely special and famous because it is located on a dormant volcano.
            </p>
          </div>
          <div
            className="highlight-instruction two"
          >
            <h5
              className="highlight-instruction-header"
            >
              <span
                className="highlight-instruction-number"
              >
                2
              </span>
              <span>
                Click, tap, or select the sentence*
              </span>
            </h5>
            <img
              alt="Default cursor showing exaggerated clicking"
              src="undefined/images/icons/cursor-click.svg"
            />
            <p>
              <span
                className="student-highlight"
              >
                Yellowstone National Park was established in 1872 as the first national park in the United States.
              </span>
               It spans across areas in Wyoming, Idaho, and Montana. Yellowstone is extremely special and famous because it is located on a dormant volcano.
            </p>
            <p
              className="unhighlight-instructions"
            >
              *If you change your mind about something you've highlighted, click, tap, or deselect the sentence to remove the highlight
            </p>
          </div>
        </div>
      </HighlightInstructions>
    </section>
  </div>
</ReadAndHighlightInstructions>
`;

exports[`ReadAndHighlightInstructions component when the student has started making highlights renders 1`] = `
<ReadAndHighlightInstructions
  activeStep={1}
  closeReadTheDirectionsModal={[Function]}
  inReflection={false}
  passage={
    Object {
      "highlight_prompt": "",
    }
  }
  removeHighlight={[Function]}
  showReadTheDirectionsModal={false}
  studentHighlights={
    Array [
      "This is a highlight made by a student.",
    ]
  }
>
  <div
    className="read-and-highlight-container"
  >
    <DirectionsSectionAndModal
      activeStep={1}
      className="hide-on-mobile"
      closeReadTheDirectionsModal={[Function]}
      inReflection={false}
      passage={
        Object {
          "highlight_prompt": "",
        }
      }
      showReadTheDirectionsModal={false}
    >
      <div
        className="hide-on-mobile"
      >
        <span />
        <section
          className="directions-section"
        >
          <h3>
            Directions
          </h3>
          <p>
            As you read, highlight two sentences 
            <u />
          </p>
        </section>
      </div>
    </DirectionsSectionAndModal>
    <section
      className="highlight-section"
    >
      <h3>
        Highlights
      </h3>
      <DisplayStudentHighlight
        inReflection={false}
        key="This is a highlight made by a student."
        removeHighlight={[Function]}
        studentHighlight="This is a highlight made by a student."
      >
        <div
          className="display-student-highlight"
        >
          <span>
            This is a highlight made by a student.
          </span>
          <button
            className="interactive-wrapper focus-on-light"
            onClick={[Function]}
            type="button"
          >
            <img
              alt="Icon showing a gray circle with a horizontal white line inside of it"
              src="undefined/images/icons/icons-remove.svg"
            />
          </button>
        </div>
      </DisplayStudentHighlight>
    </section>
  </div>
</ReadAndHighlightInstructions>
`;
